labc/upg3/govoid_compile.txt
govoid.c: In function ‘main’:
govoid.c:69:3: warning: dereferencing ‘void *’ pointer [enabled by default]
   *vp = 1234; /* The compiler should complain about this. */
   ^
govoid.c:69:3: error: invalid use of void expression
